[package]
name = "gdlogue"
version = "0.1.0"
edition = "2018"
license = "MIT OR Apache-2.0"
keywords = ["text-processing", "game-design", "game-development"]
categories = ["text-processing", "game-development"]
description = "Game design dialogue creation library"
homepage = "https://github.com/simhyeon/gdlogue-rs"
repository = "https://github.com/simhyeon/gdlogue-rs"
readme = "README.md"

[dependencies]
serde = {version = "1.0.126", features=["derive"]}
serde_json = "1.0.64"
thiserror = "1.0.25"
which = "4.1.0"

[lib]
name = "gdlogue"
path = "src/lib.rs"
